--- a/mac/Workman.bundle/Contents/Info.plist
+++ b/mac/Workman.bundle/Contents/Info.plist
@@ -10,6 +10,10 @@
 	<string>1.0</string>
 	<key>KLInfo_Workman</key>
 	<dict>
+		<key>TICapsLockLanguageSwitchCapable</key>
+		<false/>
+		<key>TISIconIsTemplate</key>
+		<false/>
 		<key>TISInputSourceID</key>
 		<string>org.sil.ukelele.keyboardlayout.workman.workman</string>
 		<key>TISIntendedLanguage</key>
@@ -17,13 +21,54 @@
 	</dict>
 	<key>KLInfo_Workman Extended</key>
 	<dict>
+		<key>TICapsLockLanguageSwitchCapable</key>
+		<false/>
+		<key>TISIconIsTemplate</key>
+		<false/>
 		<key>TISInputSourceID</key>
 		<string>org.sil.ukelele.keyboardlayout.workman.workmanextended</string>
 		<key>TISIntendedLanguage</key>
 		<string>en-US</string>
 	</dict>
+	<key>KLInfo_Workman S</key>
+	<dict>
+		<key>TICapsLockLanguageSwitchCapable</key>
+		<false/>
+		<key>TISIconIsTemplate</key>
+		<false/>
+		<key>TISInputSourceID</key>
+		<string>org.sil.ukelele.keyboardlayout.workman.workmans</string>
+		<key>TISIntendedLanguage</key>
+		<string>en-GB</string>
+	</dict>
+	<key>KLInfo_Workman UK</key>
+	<dict>
+		<key>TICapsLockLanguageSwitchCapable</key>
+		<false/>
+		<key>TISIconIsTemplate</key>
+		<false/>
+		<key>TISInputSourceID</key>
+		<string>org.sil.ukelele.keyboardlayout.workman.workmanuk</string>
+		<key>TISIntendedLanguage</key>
+		<string>en-GB</string>
+	</dict>
+	<key>KLInfo_Workman-Dead</key>
+	<dict>
+		<key>TICapsLockLanguageSwitchCapable</key>
+		<false/>
+		<key>TISIconIsTemplate</key>
+		<false/>
+		<key>TISInputSourceID</key>
+		<string>org.sil.ukelele.keyboardlayout.workman.workman-dead</string>
+		<key>TISIntendedLanguage</key>
+		<string>en-US</string>
+	</dict>
 	<key>KLInfo_Workman-IO</key>
 	<dict>
+		<key>TICapsLockLanguageSwitchCapable</key>
+		<false/>
+		<key>TISIconIsTemplate</key>
+		<false/>
 		<key>TISInputSourceID</key>
 		<string>org.sil.ukelele.keyboardlayout.workman.workman-io</string>
 		<key>TISIntendedLanguage</key>
@@ -31,6 +76,10 @@
 	</dict>
 	<key>KLInfo_Workman-P</key>
 	<dict>
+		<key>TICapsLockLanguageSwitchCapable</key>
+		<false/>
+		<key>TISIconIsTemplate</key>
+		<false/>
 		<key>TISInputSourceID</key>
 		<string>org.sil.ukelele.keyboardlayout.workman.workman-p</string>
 		<key>TISIntendedLanguage</key>
@@ -38,31 +87,14 @@
 	</dict>
 	<key>KLInfo_Workman-P Extended</key>
 	<dict>
+		<key>TICapsLockLanguageSwitchCapable</key>
+		<false/>
+		<key>TISIconIsTemplate</key>
+		<false/>
 		<key>TISInputSourceID</key>
 		<string>org.sil.ukelele.keyboardlayout.workman.workman-pextended</string>
 		<key>TISIntendedLanguage</key>
 		<string>en-US</string>
-	</dict>
-	<key>KLInfo_Workman-P - Qwerty ⌘</key>
-	<dict>
-		<key>TISInputSourceID</key>
-		<string>org.sil.ukelele.keyboardlayout.workman.workman-p-qwerty-cmd</string>
-		<key>TISIntendedLanguage</key>
-		<string>en-US</string>
-	</dict>
-	<key>KLInfo_Workman-Dead</key>
-	<dict>
-		<key>TISInputSourceID</key>
-		<string>org.sil.ukelele.keyboardlayout.workman.workman-dead</string>
-		<key>TISIntendedLanguage</key>
-		<string>en-US</string>
-	</dict>
-	<key>KLInfo_Workman UK</key>
-	<dict>
-		<key>TISInputSourceID</key>
-		<string>org.sil.ukelele.keyboardlayout.workman.workmanuk</string>
-		<key>TISIntendedLanguage</key>
-		<string>en-GB</string>
 	</dict>
 </dict>
 </plist>
